--- a/EDA_and_model.ipynb
+++ b/EDA_and_model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "7a99cabc-6413-4ed0-b079-593bc2a787eb",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "392d6e24-dc5a-4d18-94cf-6859d153a2e7",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "671098f8-fe33-4a0e-85d8-65c1f1384823",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "cb688bda-c2c1-4e96-9e4f-4dcaeddce4b1",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "4              Y      1.5     Flat             0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "7b3bbf62-06be-4690-b2a1-855fe4a6eae1",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "2fbbb18c-a008-4adc-979d-443db79fe3db",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "(734, 12)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "47e12f4a-f120-47da-8c7a-d08c6915bc98",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "max      5.600000      1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "e9e348ac-3779-4811-8668-d4a6896d534e",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "f9599842-72b9-4bfb-bf94-9d04f33cf2e4",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "2786c9f8-c327-4647-a61b-023fb26979c1",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "471a5c8b-28a8-454e-beb0-586cf1d6450d",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "ded6c616-d99d-42ad-9775-8d7e40e75abe",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "93e306a4-bf95-4265-bf79-b1c735318cd3",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "c7686862-8ab6-45ce-bf2d-15a74c56c47b",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "49efc2d1-33e8-4de1-8b0f-f629fc3e0773",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "ff8ec0dd-33c6-4b43-98c7-69b0e2f08bc2",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "aaa5c378-358b-4cf6-a8a5-db503ee952f4",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,7 @@
        "True            0    1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
+   "id": "864dbe6c-c99d-44c3-8b10-f06a347cc1bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>HeartDisease</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RestingBP</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>82</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "HeartDisease   0    1\n",
+       "RestingBP            \n",
+       "False         82  102"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(test_df[\"RestingBP\"] == 0, test_df[\"HeartDisease\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "8a4175fb-f673-400b-8251-f5ca78f017c0",
    "metadata": {},
    "outputs": [],
@@ -916,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "id": "72555355-ae64-4246-a17c-2f513c6b586d",
    "metadata": {},
    "outputs": [
@@ -959,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "id": "602903d7-796d-49c9-a45f-3b3e7840f56e",
    "metadata": {},
    "outputs": [
@@ -988,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "id": "0f93c6ec-7626-4abe-a83d-92a8c7837f0c",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "2645eae4-a5ef-4642-8aae-6aaa351533b1",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "id": "ed24cf5e-3011-4748-8f89-97f854325e8c",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1180,7 @@
        "True           17  119"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "id": "22c191d8-ac05-4aeb-a9cd-71c2327e9ade",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "id": "5758a176-2651-40e2-a5a6-79395e758934",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1269,7 @@
        "False         328  405"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1280,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
+   "id": "b745ea0f-f20c-4ee3-8702-8a6c1361f40f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>HeartDisease</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cholesterol</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>82</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "HeartDisease   0    1\n",
+       "Cholesterol          \n",
+       "False         82  102"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(test_df[\"Cholesterol\"]==0, test_df[\"HeartDisease\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "d43b40e2-e3d7-4559-acc9-7306c4167d5a",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "id": "ab62f11b-857b-4c87-be1b-49471dcd62af",
    "metadata": {
     "scrolled": true
@@ -1292,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "id": "6ece1225-79df-4b16-bf07-eaa6f428550b",
    "metadata": {},
    "outputs": [
@@ -1336,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "id": "fe0a6633-8e4d-4f56-af8b-c699c30e81da",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "14b34ff1-7717-483c-a1a8-9ea36ea916a3",
    "metadata": {},
    "outputs": [
@@ -1409,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "id": "75dd0b43-1775-4a97-925f-96321248138c",
    "metadata": {},
    "outputs": [
@@ -1450,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "id": "23289a7f-8531-4e0d-8909-8fc1d6e17221",
    "metadata": {},
    "outputs": [
@@ -1494,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "id": "6252f481-4f77-4c7a-973c-91ff612e8052",
    "metadata": {},
    "outputs": [
@@ -1523,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "id": "abb94a2f-7b1f-42cd-9258-2fdca7f3db24",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "id": "08681f3f-4e79-4a11-8b86-6b1c79f36423",
    "metadata": {},
    "outputs": [
@@ -1607,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "id": "12923286-b95f-4892-8881-e6ec09a4963c",
    "metadata": {},
    "outputs": [
@@ -1643,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "id": "726b4dfa-de77-409f-aa31-40ccde368c3a",
    "metadata": {},
    "outputs": [],
@@ -1659,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "id": "6b009908-19fe-4236-ac26-dd961bdf3dc1",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 69,
    "id": "9cf9fa00-b3ce-4126-885b-8fe30dd6bfc2",
    "metadata": {},
    "outputs": [
@@ -1830,7 +1952,7 @@
        "4  128.0               1      1.5     Flat             0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "id": "57797563-ddba-4a21-9dec-9758d9cd59bb",
    "metadata": {},
    "outputs": [
@@ -1877,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "id": "97f0f7b9-20a6-48e4-a636-a2151d7ce6d3",
    "metadata": {},
    "outputs": [],
@@ -1891,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "id": "4849aa36-a0ac-4b0f-82c2-63c6978d4332",
    "metadata": {},
    "outputs": [
@@ -1934,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "id": "bdf27a29-5023-4e02-8ac7-b77f666d42b1",
    "metadata": {},
    "outputs": [
@@ -1977,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "id": "65df76ea-af0b-442a-a9f0-f7a6fd3d8383",
    "metadata": {},
    "outputs": [
@@ -2168,7 +2290,7 @@
        "4              0              0              1            0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2179,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "id": "f4be5eaf-1d2a-43ba-a5f3-57bcdd5edcc1",
    "metadata": {},
    "outputs": [
@@ -2207,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "id": "a934ffc7-0322-4a92-953d-539b5a760466",
    "metadata": {},
    "outputs": [
@@ -2237,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "id": "8b28acf9-c04d-47b8-90ae-94a60747d4a3",
    "metadata": {},
    "outputs": [],
@@ -2259,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 78,
    "id": "ac11b5df-6494-4c16-b082-2cdaa801e5cf",
    "metadata": {},
    "outputs": [
@@ -2287,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "id": "ee62b5c7-e1e1-4e1f-8104-5d31a2f8bbef",
    "metadata": {},
    "outputs": [
@@ -2715,7 +2837,7 @@
        "RandomForestClassifier(random_state=11)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2726,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 80,
    "id": "8f1f5f4f-fe27-4a33-b466-a6ab8cb2a154",
    "metadata": {},
    "outputs": [],
@@ -2737,7 +2859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 81,
    "id": "67cc5389-657d-42b5-b0fc-e2964c98df04",
    "metadata": {},
    "outputs": [
@@ -2763,7 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 82,
    "id": "bc2c3452-0315-4e25-a59c-5710c00ca0e8",
    "metadata": {},
    "outputs": [
@@ -2789,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 83,
    "id": "8c438005-be13-45ea-9606-bdb551b6c061",
    "metadata": {},
    "outputs": [
@@ -2823,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 84,
    "id": "26dffa5e-dd6f-4234-82ca-0afc4255bf16",
    "metadata": {},
    "outputs": [
@@ -2863,7 +2985,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
